--- a/digitacao.html
+++ b/digitacao.html
@@ -59,11 +59,18 @@
             border-radius: 5px;
             cursor: pointer;
         }
+        
+        #botaoVoltar {
+            padding: 5px 10px;
+            background-color: rgba(0, 0, 0, 0.5);
+            border-radius: 5px;
+        }
     </style>
 </head>
 
 
 <body>
+    <a href="index.html" id="botaoVoltar" style="position: absolute; top: 20px; left: 20px; text-decoration: none; color: white;">Voltar</a>
     <div class="main">
         <div class="exibicao-palavra" id="exibicaoPalavra">Palavra</div>
         <input type="text" class="caixa-input" id="caixaInput" autofocus>
