--- a/velha.html
+++ b/velha.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jogo da Velha</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -65,12 +66,18 @@
         .botaoComeco {
             padding: 10px 20px;
             font-size: 16px;
-            background-color: #007bff;
+            background-color: #ff2bdc;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             margin-top: 20px;
+        }
+        
+        #botaoVoltar {
+            padding: 5px 10px;
+            background-color: rgba(0, 0, 0, 0.5);
+            border-radius: 5px;
         }
     </style>
     <title>Jogo da Velha</title>
@@ -78,6 +85,8 @@
 
 
 <body>
+    <a href="index.html" id="botaoVoltar" style="position: absolute; top: 20px; left: 20px; text-decoration: none; color: white;">Voltar</a>
+
     <div class="game-container">
         <h1>Jogo da Velha</h1>
         <div class="grid" id="grid">
